--- a/__objetivo_de_aprendizaje.html
+++ b/__objetivo_de_aprendizaje.html
@@ -22,14 +22,14 @@
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">⚙️ Diseño de Algoritmos</a></li>
-   <li id="active"><a href="__objetivo_de_aprendizaje.html" class="active no-ch">🎯  Objetivo de aprendizaje</a></li>
-   <li><a href="__contenidos.html" class="no-ch">📚  Contenidos</a></li>
+   <li id="active"><a href="objetivo_de_aprendizaje.html" class="active no-ch">🎯  Objetivo de aprendizaje</a></li>
+   <li><a href="contenidos.html" class="no-ch">📚  Contenidos</a></li>
    <li><a href="crditos_del_recurso.html" class="no-ch">👥Créditos del recurso</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="index.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="__contenidos.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="index.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="contenidos.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -50,7 +50,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="index.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="__contenidos.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="index.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="contenidos.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
