--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 <nav id="siteNav">
 <ul>
    <li id="active"><a href="index.html" class="active daddy main-node">⚙️ Diseño de Algoritmos</a></li>
-   <li><a href="objetivo_de_aprendizaje.html" class="no-ch">🎯  Objetivo de aprendizaje</a></li>
+   <li><a href="objetivodeaprendizaje.html" class="no-ch">🎯  Objetivo de aprendizaje</a></li>
    <li><a href="contenidos.html" class="no-ch">📚  Contenidos</a></li>
-   <li><a href="crditos_del_recurso.html" class="no-ch">👥Créditos del recurso</a></li>
+   <li><a href="crditosdelrecurso.html" class="no-ch">👥Créditos del recurso</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="objetivo_de_aprendizaje.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="objetivodeaprendizaje.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -54,7 +54,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="objetivo_de_aprendizaje.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="objetivodeaprendizaje.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
